--- a/content/post/2015-07-23-r-rmarkdown.Rmd
+++ b/content/post/2015-07-23-r-rmarkdown.Rmd
@@ -22,16 +22,16 @@ fit <- lm(dist ~ speed, data = cars)
 fit
 ```
 
-# Including Plots
 
-You can also embed plots. See Figure \@ref(fig:pie) for example:
 
-```{r pie, fig.cap='A fancy pie chart.', tidy=FALSE}
-par(mar = c(0, 1, 0, 1))
-pie(
-  c(280, 60, 20),
-  c('Sky', 'Sunny side of pyramid', 'Shady side of pyramid'),
-  col = c('#0292D8', '#F7EA39', '#C4B632'),
-  init.angle = -50, border = NA
+#asdasdasdasdasdasdasads
+#asdasdasdasd
+
+```{r app,echo=FALSE}
+
+shinyAppDir("/home/sium/gitrepos/miRJanus/webapps/healthy",
+options = list(width = "100%")
+
 )
-```
+
+``
