--- a/content/post/2019-02-15-r-markdown-test.Rmd
+++ b/content/post/2019-02-15-r-markdown-test.Rmd
@@ -1,13 +1,13 @@
 ---
-title: "Hello R Markdown"
-author: "Frida Gomam"
-date: '2015-07-23T21:13:14-05:00'
-tags:
-- R Markdown
-- plot
-- regression
-categories: R
+title: r markdown test
+author: ~
+date: '2019-02-15'
+slug: r-markdown-test
+categories: []
+tags: []
+authors: []
 ---
+
 
 ```{r setup, include=FALSE,message=FALSE,warning=FALSE}
 
@@ -24,6 +24,15 @@ You can embed an R code chunk like this:
 summary(cars)
 fit <- lm(dist ~ speed, data = cars)
 fit
+```
+
+
+
+
+```{r}
+
+knitr::include_app("https://sinanugur.shinyapps.io/healthy/")
+
 ```
 
 
